--- a/.github/workflows/daily_scrape.yml
+++ b/.github/workflows/daily_scrape.yml
@@ -5,6 +5,10 @@ on:
     - cron: '8 15,21,3,9 * * *' # JST 00:08, 06:08, 12:08, 18:08
   workflow_dispatch:
 
+concurrency:
+  group: scrape-group
+  cancel-in-progress: false
+
 jobs:
   scrape:
     runs-on: ubuntu-latest
@@ -13,6 +17,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -31,4 +37,5 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add data/
           git commit -m "chore: update product data [$(date +'%Y-%m-%d')]" || exit 0
+          git pull --rebase origin main
           git push
