命名更新等

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version": 3,
-    "name": "BOOTH VRChat Price Tracker",
+    "name": "BOOTH Price Tracker for VRChat",
     "version": "1.0.0",
     "description": "BOOTHのVRChat関連商品の価格推移を表示します",
     "permissions": [
